[metadata]
name = pybox
version = attr: pybox.__version__
author = codetent
description = Executable bundler for Windows
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platforms = Windows
url = https://github.com/codetent/pybox
classifiers  =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Topic :: Software Development :: Build Tools

[options]
python_requires = >=3.7
package_dir =
    =src
packages = find:
install_requires =
    plumbum

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
    flake8
    flake8-annotations
    flake8-comprehensions
    flake8-docstrings
    flake8-raise
    flake8-typing-imports

[options.package_data]
pybox.rcedit = *.exe

[options.entry_points]
console_scripts =
    pybox = pybox.cli:PyBox.run

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
docstring-convention = google

[yapf]
column_limit = 120
